--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -1,3 +1,5 @@
+
+
 /*
   Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
   - The "symbol *" part is to solve Firefox SVG sprite bug
@@ -15,6 +17,16 @@
 /* Reapply the pointer cursor for anchor tags */
 a {
   cursor: revert;
+}
+body {
+ 
+ margin: 0;
+ padding: 0;
+ border: 0;
+ font-size: 100%;
+ font: inherit;
+ vertical-align: baseline;
+
 }
 /* Remove list styles (bullets/numbers) */
 ol, ul, menu {
@@ -43,7 +55,7 @@ textarea {
   -moz-user-modify: read-write;
   -webkit-user-modify: read-write;
   overflow-wrap: break-word;
-  -webkit-line-break: after-white-space;
+  /* -webkit-line-break: after-white-space; */
 }
 /* apply back the draggable feature - exist only in Chromium and Safari */
 :where([draggable="true"]) {
