--- a/src/style/base.css
+++ b/src/style/base.css
@@ -16,12 +16,12 @@ body {
     --secondary-text-login: #515D74;
     --primary-white-login: #E6EAF2;
     --secondary-white-login: #FAFAFC;
-    --primary-white-product: #FFF;
-    --secondary-white-product: #FAFAFC;
+    --primary-white: #FFF;
+    --secondary-white: #FAFAFC;
     --primary-text-product: #666;
     --account-logo: #D9D9D9;
-    --primary-green-button: #10C300;
-    --primary-black-button: #000;
+    --primary-green: #10C300;
+    --primary-black: #000;
 
 
 }
