chore(layout): input color var insertion ⚙️

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -19,6 +19,7 @@ body {
     --primary-white: #FFF;
     --secondary-white: #FAFAFC;
     --primary-text-product: #666;
+    --input-border: #515d7480;
     --account-logo: #D9D9D9;
     --primary-green: #10C300;
     --primary-black: #000;
