refact(button): correction in imports/exports of variables, functions and implementation types of utils and defaults. 🔨

--- a/src/components/button/style/ButtonStyle.css
+++ b/src/components/button/style/ButtonStyle.css
@@ -8,7 +8,7 @@ button {
 .cta {
   background-color: var(--cta-pink);
   border-radius: 5px;
-  color: --primary-white;
+  color: var(--primary-white);
   text-transform: uppercase;
 }
 /* ghost */
