refact(css): adding comments, alphabetical organization, and clean code practices 🔨

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -1,28 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
-
-body {
-    background-color: #FAFAFC;
-    font-family: 'Sora', sans-serif;
-}
-
- /* colors  */
+/* Google Font Sora */
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap");
 
 :root {
-   
-    --black-logo: #2A343E;
-    --pink-logo: #F00843;
-    --cta-pink: #F30168;
-    --primary-text-login: #292D32;
-    --secondary-text-login: #515D74;
-    --primary-white-login: #E6EAF2;
-    --secondary-white-login: #FAFAFC;
-    --primary-white: #FFF;
-    --secondary-white: #FAFAFC;
-    --primary-text-product: #666;
-    --input-border: #515d7480;
-    --account-logo: #D9D9D9;
-    --primary-green: #10C300;
-    --primary-black: #000;
+  /* Variáveis de cores  */
+  --account-logo: #d9d9d9;
+  --black-logo: #2a343e;
+  --cta-pink: #f30168;
+  --input-border: #515d7480;
+  --pink-logo: #f00843;
+  --primary-black: #000;
+  --primary-green: #10c300;
+  --primary-text-login: #292d32;
+  --primary-text-product: #666;
+  --primary-white: #fff;
+  --primary-white-login: #e6eaf2;
+  --secondary-text-login: #515d74;
+  --secondary-white: #fafafc;
+  --secondary-white-login: #fafafc;
 
+  /* Variáveis de fonte */
+  --default-font: "Sora", sans-serif;
+}
 
+body {
+  /* Cor de background default */
+  background-color: var(--primary-white);
+  /* Fonte padrão para todos itens */
+  font-family: var(--default-font);
 }
