--- a/src/components/input/style/InputStyle.css
+++ b/src/components/input/style/InputStyle.css
@@ -3,13 +3,14 @@ input {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  background: var(--primary-white);
+  background: var(--white-50);
   color: var(--primary-text-login);
-  caret-color: var(--cta-pink);
+  caret-color: var(--rose-600);
   width: 551px;
   height: 80px;
   padding: 30px 16px;
-  border: 1px solid var(--input-border);
+  border: 1px solid var(--comet-600-80);
+
   border-radius: 5px;
   font-weight: 400;
   font-size: 16px;
@@ -19,7 +20,7 @@ input {
 
 /* Estilizações do Input Placeholder */
 input::placeholder {
-  color: var(--secondary-text-login);
+  color: var(--comet-600);
 }
 
 /* Estilizações do Input Focus */
@@ -27,7 +28,7 @@ input:hover,
 input:active,
 input:focus {
   border: none;
-  outline: var(--cta-pink);
+  outline: var(--rose-600);
   outline-style: solid;
 }
 
@@ -43,5 +44,5 @@ label {
   font-weight: 400;
   font-size: 12px;
   line-height: 20px;
-  color: var(--secondary-text-login);
+  color: var(--comet-600);
 }
