--- a/src/components/input/style/InputStyle.css
+++ b/src/components/input/style/InputStyle.css
@@ -34,9 +34,11 @@ input:focus {
 
 /* Estilizações do Input Error */
 label {
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  margin-bottom: 1px;
 }
 
 /* Estilizações do Input Description */
