--- a/src/pages/LoginPage/style/LoginPage.css
+++ b/src/pages/LoginPage/style/LoginPage.css
@@ -33,7 +33,9 @@
   background-color: var(--white-50);
   height: 492px;
   margin: 32px 0px;
-  padding-left: 30px;
+  padding-bottom: 35px;
+  padding-left: 33px;
+  padding-right: 33px;
   padding-top: 28px;
   width: 617px;
 }
@@ -77,7 +79,10 @@
 
 /* estilo do container do botão login */
 .login_container {
-  margin-top: 50px;
+  display: grid;
+  place-items: center;
+  margin-top: 40px;
+  width: 551px;
 }
 
 /* estilo do texto "ainda não tem conta" */
