--- a/src/pages/PlansPage/components/PlanCol/style/PlanColStyle.css
+++ b/src/pages/PlansPage/components/PlanCol/style/PlanColStyle.css
@@ -117,6 +117,6 @@ h5 {
   text-align: center;
 }
 
-.title_highlight {
+.title_highlight, .plan_item--highlighted {
   text-decoration: underline;
 }
