--- a/src/pages/PlansPage/components/PlansContainer/style/PlansContainer.css
+++ b/src/pages/PlansPage/components/PlansContainer/style/PlansContainer.css
@@ -3,7 +3,7 @@
   display: grid;
   gap: 0 25px;
   grid-auto-flow: column;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(3, auto);
   margin-bottom: 66px;
   justify-items: center;
 }
