--- a/src/pages/PlansPage/components/PlanCol/style/PlanColStyle.css
+++ b/src/pages/PlansPage/components/PlanCol/style/PlanColStyle.css
@@ -72,8 +72,7 @@ h5 {
   font-weight: 700;
   height: 43px;
   line-height: 43px;
-  margin-bottom: 13px;
-  margin-top: 21px;
+  margin: 21px 0 13px 0;
   text-align: center;
 }
 
