--- a/src/pages/RegistrationPage/style/RegistrationPageStyle.css
+++ b/src/pages/RegistrationPage/style/RegistrationPageStyle.css
@@ -1,145 +1,36 @@
 /* checkbox aceite de termos */
-.checkbox {
-  border: 1.6666px solid #f30168;
-  border-radius: 30%;
-  display: inline-block;
-  height: 16px;
-  margin-right: 12.46px;
-  width: 16px;
-}
-/* checkbox checado */
-.checkbox:checked {
-  background-color: #f30168;
+.accept-terms {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-/* página de registro */
+/* container da página de registro */
 .registration-page {
   display: grid;
   place-items: center;
 }
-/* container da página de registro */
+
+/* container do formulário de registro */
 .register_container {
   display: grid;
-  grid-auto-flow: column;
   gap: 20px;
+  grid-auto-flow: column;
   margin: 44px 0 46px;
 }
+
 /* container do formulário de registro */
 .register_container-box_register {
-  background: #ffffff;
-  border: 1px solid #e6eaf2;
+  background-color: var(--white-50);
+  border: 1px solid var(--catskill-white-100);
   border-radius: 5px;
   height: 1036px;
   padding: 28px 33px 27px;
   width: 617px;
-}
-/* container dos títulos da página de registro */
-.register_container-box_register-titles--title {
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  margin-bottom: 5px;
-}
-/* container dos subtítulos da página de registro */
-.register_container-box_register-titles--subtitle {
-  font-size: 18px;
-  line-height: 23px;
-  margin-bottom: 20px;
-}
-
-/* container do divider formulário de registro */
-.divider_section {
-  margin-top: 20px;
-}
-
-/* container do formulário de termos de usuário */
-.user_terms {
-  align-items: center;
-  display: flex;
-  height: 40px;
-  margin: 20px 0px;
-  width: 524.3px;
 }
 
 /* formulário de registro */
 .register-form {
   display: grid;
   gap: 20px;
-}
-/* container do título de formulário de registro se site */
-.website_register-titles--title {
-  color: #292d32;
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 35px;
-  margin: 20px 0 15px;
-}
-
-/* container do botão trocar de plano */
-.change_plan_container {
-  align-items: end;
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    180deg,
-    rgba(2, 0, 36, 0) 0%,
-    rgba(255, 255, 255, 1) 70%
-  );
-  display: grid;
-  height: 310px;
-  justify-items: center;
-  padding-bottom: 30px;
-  position: absolute;
-  top: 1012px;
-  width: 348px;
-  z-index: 1;
-}
-
-.plan_selected_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 179px;
-  height: 33px;
-  background: #000000;
-  border-radius: 10px;
-  position: absolute;
-  z-index: 2;
-  top: 270px;
-}
-
-.plancol_container {
-  display: grid;
-  justify-items: center;
-}
-
-.plan_selected_container--text {
-  color: var(--white-50);
-  font-size: 14px;
-  line-height: 18px;
-  text-transform: uppercase;
-}
-
-@media (max-width: 950px) {
-  .register_container {
-    display: grid;
-    place-items: center;
-    grid-auto-flow: row;
-    gap: 20px;
-    margin: 44px 0 46px;
-  }
-  .plancol_container {
-    grid-row: 1;
-  }
-  .plancol_component {
-    height: 369px !important;
-    overflow: hidden;
-  }
-  .change_plan_container {
-    top: 550px;
-    background: #fff;
-    height: 100px;
-  }
-  .plan_selected_container {
-    top: 305px;
-  }
 }
